syntax = "proto3";

package rj_GroupService;

import "google/protobuf/empty.proto";

option cc_generic_services = true;

message AddGroupRequest
{
    int32 userid = 1;
    int32 group_id = 2;
}

message AddGroupResponse
{
    bool is_success = 1;
    bool vertify = 2;
    int32 group_id = 3;
    bytes error_msg = 4;
}

message CreateGroupRequest
{
    int32 userid = 1;
    bytes group_name = 2;
    bytes group_desc = 3;
}

message CreateGroupResponse
{
    int32 grouid = 1;
}

message QuitGroupRequest
{
    int32 userid = 1;
    int32 groupid = 2;
}

message GetGroupUsersRequest
{
    int32 group_id = 1;
}

message  UserInfo
{
    int32 id = 1;
    bytes name = 2;
}

message GetGroupUsersResponse
{
    bool is_success = 1;
    repeated UserInfo users = 2;
}

service GroupServiceRpc
{
    rpc AddGroup (AddGroupRequest) returns (AddGroupResponse);
    rpc CreateGroup (CreateGroupRequest) returns (CreateGroupResponse);
    rpc QuitGroup (QuitGroupRequest) returns (google.protobuf.Empty);
    rpc GetGroupUsers (GetGroupUsersRequest) returns (GetGroupUsersResponse);
}